9-security-compliance/1-pod-security-standards/manifests/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: stickysessions
  namespace: sticky-session-secure
spec:
  podSelector:
    matchLabels:
      app: stickysessions
  egress:
    - {}
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
  policyTypes:
    - Ingress
    - Egress
